--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -161,34 +161,36 @@ steps:
       set -o pipefail
       pids=()
       cloudProducts=("generic" "gke-autopilot")
-      k8sVersions=("1.23" "1.24" "1.25")
-      clusterRegions=("us-east1" "us-west1" "us-central1")
+      k8sVersions=("1.23 us-east1" "1.24 us-west1" "1.25 us-central1")
+      # clusterRegions=("us-east1" "us-west1" "us-central1")
 
       for cloudProduct in ${cloudProducts[@]}
       do
         for i in ${!k8sVersions[@]}
-        do
-          if [ $cloudProduct = gke-autopilot ] && [ ${k8sVersions[$i]} = 1.23 ]
-          then
-            continue
-          fi
-          if [ $cloudProduct = gke-autopilot ]
-          then
-            featureWithGate="CustomFasSyncInterval=false&SafeToEvict=true&SDKGracefulTermination=false&StateAllocationFilter=false&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&PodHostname=true&SplitControllerAndExtensions=true&Example=true"
-            featureWithoutGate="SplitControllerAndExtensions=true"
-            testClusterLocation="${clusterRegions[$i]}"
-            testCluster="gke-autopilot-e2e-test-cluster-${k8sVersions[$i]//./-}"
-          else
-            featureWithGate="CustomFasSyncInterval=false&SafeToEvict=false&SDKGracefulTermination=false&StateAllocationFilter=false&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&PodHostname=true&SplitControllerAndExtensions=true&Example=true"
-            featureWithoutGate=""
-            testClusterLocation="${clusterRegions[$i]}-c"
-            testCluster="gke-standard-e2e-test-cluster-${k8sVersions[$i]//./-}"
-          fi
-          { gcloud builds submit . --config=e2e-test-cloudbuild.yaml \
-            --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation,_REGISTRY=${_REGISTRY} \
-            |& sed "s/^/${cloudProduct}-${k8sVersions[$i]}: /"; } &
-          pids+=($!)
-        done
+        set -- $i
+        echo $1 and $2
+        # do
+        #   if [ $cloudProduct = gke-autopilot ] && [ ${k8sVersions[$i]} = 1.23 ]
+        #   then
+        #     continue
+        #   fi
+        #   if [ $cloudProduct = gke-autopilot ]
+        #   then
+        #     featureWithGate="CustomFasSyncInterval=false&SafeToEvict=true&SDKGracefulTermination=false&StateAllocationFilter=false&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&PodHostname=true&SplitControllerAndExtensions=true&Example=true"
+        #     featureWithoutGate="SplitControllerAndExtensions=true"
+        #     testClusterLocation="${clusterRegions[$i]}"
+        #     testCluster="gke-autopilot-e2e-test-cluster-${k8sVersions[$i]//./-}"
+        #   else
+        #     featureWithGate="CustomFasSyncInterval=false&SafeToEvict=false&SDKGracefulTermination=false&StateAllocationFilter=false&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&PodHostname=true&SplitControllerAndExtensions=true&Example=true"
+        #     featureWithoutGate=""
+        #     testClusterLocation="${clusterRegions[$i]}-c"
+        #     testCluster="gke-standard-e2e-test-cluster-${k8sVersions[$i]//./-}"
+        #   fi
+        #   { gcloud builds submit . --config=e2e-test-cloudbuild.yaml \
+        #     --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation,_REGISTRY=${_REGISTRY} \
+        #     |& sed "s/^/${cloudProduct}-${k8sVersions[$i]}: /"; } &
+        #   pids+=($!)
+        # done
       done
 
       # If any of the subprocess exit with nonzero code, exit the main process and kill all subprocesses
