--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -162,9 +162,9 @@ steps:
       pids=()
       cloudProducts=("generic" "gke-autopilot")
       declare -A versionsAndRegions=( [1.23]=us-east1 [1.24]=us-west1 [1.25]=us-central1 )
-      for i in "${!versionsAndRegions[@]}"; do
-        j=${versionsAndRegions[$i]}
-        echo "$i.$j"
+      for a in "${!versionsAndRegions[@]}"; do
+        j=${versionsAndRegions[$a]}
+        echo "$a.$j"
       done
 
       for cloudProduct in ${cloudProducts[@]}
