--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,10 +21,10 @@ steps:
 #
 # Print Docker version
 #
-- id: cancelot
-  name: 'gcr.io/cloud-builders/gcloud-slim:latest'
+- name: 'gcr.io/cloud-builders/gcloud-slim:latest'
+  id: cancelot
   entrypoint: 'bash'
-      args: ['./cancelot.sh', '--current_build_id', '$BUILD_ID']
+  args: ['./cancelot.sh', '--current_build_id', '$BUILD_ID']
 
 - name: gcr.io/cloud-builders/docker
   id: docker-version
