--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,7 +24,7 @@ steps:
 - name: 'gcr.io/cloud-builders/gcloud-slim:latest'
   id: cancelot
   entrypoint: 'bash'
-  args: ['./cancelot.sh', '--current_build_id', '$BUILD_ID']
+  args: ['./ci/cancelot.sh', '--current_build_id', '$BUILD_ID']
 
 - name: gcr.io/cloud-builders/docker
   id: docker-version
@@ -192,7 +192,7 @@ steps:
             testClusterLocation="${region}-c"
             testCluster="gke-standard-e2e-test-cluster-${version//./-}"
           fi
-          { gcloud builds submit . --config=e2e-test-cloudbuild.yaml \
+          { gcloud builds submit . --config=./ci/e2e-test-cloudbuild.yaml \
             --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation,_REGISTRY=${_REGISTRY} \
             |& sed "s/^/${cloudProduct}-${version}: /"; } &
           pids+=($!)
