--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -189,7 +189,7 @@ steps:
           else
             featureWithGate="CustomFasSyncInterval=false&SafeToEvict=false&SDKGracefulTermination=false&StateAllocationFilter=false&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&PodHostname=true&SplitControllerAndExtensions=true&Example=true"
             featureWithoutGate=""
-            testClusterLocation="${region}-c"
+            testClusterLocation="${region}"
             testCluster="gke-standard-e2e-test-cluster-${version//./-}"
           fi
           { gcloud builds submit . --config=./ci/e2e-test-cloudbuild.yaml \
