--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -51,7 +51,7 @@ steps:
             fi
             featureWithoutGate=""
             testClusterLocation="${region}"
-            { stdbuf -oL -eL gcloud builds submit . --suppress-logs --config=../ci/e2e-test-cloudbuild.yaml \
+            { stdbuf -oL -eL gcloud builds submit . --suppress-logs --config=./ci/e2e-test-cloudbuild.yaml \
               --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation,_REGISTRY=${_REGISTRY},_PARENT_COMMIT_SHA=${COMMIT_SHA},_PARENT_BUILD_ID=${BUILD_ID} \
               |& stdbuf -i0 -oL -eL grep -v " tarball " \
               |& stdbuf -i0 -oL -eL sed "s/^/${cloudProduct}-${version}: /"; } &
