--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -33,6 +33,7 @@ steps:
         set -e
         set -o pipefail
         gcloud container clusters get-credentials standard-e2e-test-cluster-1-27 --zone=us-east1 --project=gongmax-gke-dev
+        docker -v
     waitFor:
       - pull-build-image
 
