--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -32,7 +32,7 @@ steps:
       - |
         set -e
         set -o pipefail
-        gcloud container clusters get-credentials standard-e2e-test-cluster-1-27 --zone=us-east1 --project=gongmax-gke-dev
+        gcloud container clusters get-credentials standard-e2e-test-cluster-1-27 --zone=us-east1
     waitFor:
       - pull-build-image
 
