--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -41,6 +41,7 @@ steps:
     args:
       - ${_TEST_CLUSTER_NAME}
       - ${_TEST_CLUSTER_LOCATION}
+      - ${_REGISTRY}
     id: perf-test
     waitFor:
       - build-perf
