--- a/test/load/allocation/autoscaler.yaml
+++ b/test/load/allocation/autoscaler.yaml
@@ -17,10 +17,10 @@ kind: FleetAutoscaler
 metadata:
   name: fleet-autoscaler-scenario-test
 spec:
-  fleetName: scenario-test
+  fleetName: load-test-fleet
   policy:
     type: Buffer
     buffer:
-      bufferSize: 2000
-      minReplicas: 10000
-      maxReplicas: 20000
+      bufferSize: 1000
+      minReplicas: 1000
+      maxReplicas: 6000
