--- a/test/load/allocation/performance-test-autoscaler-template.yaml
+++ b/test/load/allocation/performance-test-autoscaler-template.yaml
@@ -15,9 +15,9 @@
 apiVersion: autoscaling.agones.dev/v1
 kind: FleetAutoscaler
 metadata:
-  name: fleet-autoscaler-scenario-test
+  name: performance-test-fleet-autoscaler
 spec:
-  fleetName: load-test-fleet
+  fleetName: performance-test-fleet
   policy:
     type: Buffer
     buffer:
