--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -51,12 +51,12 @@ substitutions:
   _TEST_CLUSTER_LOCATION: us-east1
   _REGISTRY: us-docker.pkg.dev/agones-images/ci
   _TEST_PROJECT_ID: gongmax-gke-dev
-  _TEST_FLEET_REPLICAS: "10"
+  _TEST_FLEET_REPLICAS: "20"
   _TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC: "60"
-  _TEST_BUFFER_SIZE: "10"
-  _TEST_MIN_REPLICAS: "10"
+  _TEST_BUFFER_SIZE: "20"
+  _TEST_MIN_REPLICAS: "20"
   _TEST_MAX_REPLICAS: "6000"
-  _TEST_DURATION: 10m
+  _TEST_DURATION: "10m"
   _TEST_CLIENTS: "50"
   _TEST_INTERVAL: "1000"
 tags: [ci, 'commit-${COMMIT_SHA}']
