--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -41,17 +41,17 @@ steps:
     args: [test-performance]
     waitFor: [pull-build-image]
     env:
-    - 'TEST_CLUSTER_NAME=${_TEST_CLUSTER_NAME}'
-    - 'TEST_CLUSTER_LOCATION=${_TEST_CLUSTER_LOCATION}'
+    - 'CLUSTER_NAME=${_TEST_CLUSTER_NAME}'
+    - 'CLUSTER_LOCATION=${_TEST_CLUSTER_LOCATION}'
     - 'REGISTRY=${_REGISTRY}'
-    - 'TEST_PROJECT_ID=${_TEST_PROJECT_ID}'
-    - 'TEST_FLEET_REPLICAS=${_TEST_FLEET_REPLICAS}'
-    - 'TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC=${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}'
-    - 'TEST_BUFFER_SIZE=${_TEST_BUFFER_SIZE}'
-    - 'TEST_MAX_REPLICAS=${_TEST_MAX_REPLICAS}'
-    - 'TEST_DURATION=${_TEST_DURATION}'
-    - 'TEST_CLIENTS=${_TEST_CLIENTS}'
-    - 'TEST_INTERVAL=${_TEST_INTERVAL}'
+    - 'PROJECT=${_TEST_PROJECT_ID}'
+    - 'REPLICAS=${_TEST_FLEET_REPLICAS}'
+    - 'AUTO_SHUTDOWN_DELAY=${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}'
+    - 'BUFFER_SIZE=${_TEST_BUFFER_SIZE}'
+    - 'MAX_REPLICAS=${_TEST_MAX_REPLICAS}'
+    - 'DURATION=${_TEST_DURATION}'
+    - 'CLIENTS=${_TEST_CLIENTS}'
+    - 'INTERVAL=${_TEST_INTERVAL}'
 
   #
   # Run the performance tests with default feature gates setting
