Performance improvment changes

--- a/install/helm/agones/templates/crds/k8s/_io.k8s.api.core.v1.PodTemplateSpec.yaml
+++ b/install/helm/agones/templates/crds/k8s/_io.k8s.api.core.v1.PodTemplateSpec.yaml
@@ -859,7 +859,7 @@ properties:
                               - value
                             properties:
                               name:
-                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                                description: The header field name
                                 type: string
                               value:
                                 description: The header field value
@@ -927,7 +927,7 @@ properties:
                               - value
                             properties:
                               name:
-                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                                description: The header field name
                                 type: string
                               value:
                                 description: The header field value
@@ -1015,7 +1015,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -1161,7 +1161,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -1396,7 +1396,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -1741,7 +1741,7 @@ properties:
                               - value
                             properties:
                               name:
-                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                                description: The header field name
                                 type: string
                               value:
                                 description: The header field value
@@ -1809,7 +1809,7 @@ properties:
                               - value
                             properties:
                               name:
-                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                                description: The header field name
                                 type: string
                               value:
                                 description: The header field value
@@ -1897,7 +1897,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -2043,7 +2043,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -2278,7 +2278,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -2625,7 +2625,7 @@ properties:
                               - value
                             properties:
                               name:
-                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                                description: The header field name
                                 type: string
                               value:
                                 description: The header field value
@@ -2693,7 +2693,7 @@ properties:
                               - value
                             properties:
                               name:
-                                description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                                description: The header field name
                                 type: string
                               value:
                                 description: The header field value
@@ -2781,7 +2781,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -2927,7 +2927,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
@@ -3162,7 +3162,7 @@ properties:
                           - value
                         properties:
                           name:
-                            description: The header field name. This will be canonicalized upon output, so case-variant names will be understood as the same header.
+                            description: The header field name
                             type: string
                           value:
                             description: The header field value
